[package]
name = "what-the-hash"
version = "0.1.0"
authors = ["ABRT <ABRT@SIG.LIST>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

regex = "1"
regress = "0.2.0"
